# urdict

./: Cargo.toml  LICENSE-MIT  README.md
src/: dictd.rs  io.rs  main.rs  page.rs
