[package]
name = "urdict"
version = "0.3.1"
authors = ["Ning Sun <sunng@about.me>"]
description = "Urban dictionary commandline tool and dict server"
license = "MIT OR Apache-2.0"
keywords = ["dict", "dictd"]
repository = "https://github.com/sunng87/urdict"

[dependencies]
clap = "1.4.5"
hyper = "0.6.15"
ansi_term = "0.6.3"
rand = "0.3.11"
select = "0.1.2"
