[package]
name = "urdict"
version = "0.3.1"
authors = ["Ning Sun <sunng@about.me>"]
description = "Urban dictionary commandline tool and dict server"
license = "MIT"
keywords = ["dict", "dictd"]
repository = "https://github.com/sunng87/urdict"

[dependencies]
clap = "2.0.1"
hyper = "0.7.2"
ansi_term = "0.7.1"
rand = "0.3.13"
select = "0.2.2"
