[package]
name = "urdict"
version = "0.3.4-alpha.0"
authors = ["Ning Sun <sunng@about.me>"]
description = "Urban dictionary commandline tool and dict server"
license = "MIT OR Apache-2.0"
keywords = ["dict", "dictd"]
repository = "https://github.com/sunng87/urdict"

[dependencies]
clap = "2.30.0"
ansi_term = "0.10.2"
rand = "0.4.2"
select = "0.4.2"
reqwest = "0.8.5"
